2011-09-21  Xianzhu Wang  <wangxianzhu@chromium.org>

        Ensure TestWebKitAPI works on mac, win, chromium-mac and chromium-linux
        https://bugs.webkit.org/show_bug.cgi?id=68206

        Reviewed by Tony Chang.

        * WebKit.gyp:

2011-09-21  chandra shekar vallala  <chandra.vallala@gmail.com>

        [chromium]ClearFocusedNode doesn't clear the cursor or selection in editable div element.
        https://bugs.webkit.org/show_bug.cgi?id=68351

        Reviewed by Darin Fisher.

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::clearFocusedNode):

2011-09-20  Jay Civelli  <jcivelli@chromium.org>

        This CL makes it possible to create a blob from Chromium.
        https://bugs.webkit.org/show_bug.cgi?id=68286

        Reviewed by Darin Fisher.

        * WebKit.gyp:
        * public/WebBlob.h: Added.
        * src/WebBlob.cpp: Added.

2011-09-20  Jochen Eisinger  <jochen@chromium.org>

        [chromium] remove obsolete WebPermissionClient::allowImages method
        https://bugs.webkit.org/show_bug.cgi?id=68380

        Reviewed by Darin Fisher.

        * DEPS:
        * public/WebPermissionClient.h:
        (WebKit::WebPermissionClient::allowImage):

2011-09-20  Aaron Boodman  <aa@chromium.org>

        Rework script context creation/release notifications
        https://bugs.webkit.org/show_bug.cgi?id=67828

        Reviewed by Adam Barth.

        * public/WebFrameClient.h:
        (WebKit::WebFrameClient::didCreateScriptContext):
        (WebKit::WebFrameClient::didDestroyScriptContext):
        (WebKit::WebFrameClient::willReleaseScriptContext):
        * src/FrameLoaderClientImpl.cpp:
        (WebKit::FrameLoaderClientImpl::didCreateScriptContext):
        (WebKit::FrameLoaderClientImpl::willReleaseScriptContext):
        * src/FrameLoaderClientImpl.h:
        * tests/WebFrameTest.cpp:
        (WebKit::TEST_F):
        (WebKit::ContextLifetimeTestWebFrameClient::Notification::Notification):