@@ -1,3 +1,15 @@
+2011-09-21  Aaron Boodman  <aa@chromium.org>
+
+        Remove old and busted context notification APIs
+        https://bugs.webkit.org/show_bug.cgi?id=68381
+
+        Reviewed by David Levin.
+
+        * public/WebFrameClient.h:
+        * src/FrameLoaderClientImpl.cpp:
+        (WebKit::FrameLoaderClientImpl::didCreateScriptContext):
+        (WebKit::FrameLoaderClientImpl::willReleaseScriptContext):
+
 2011-09-21  Xianzhu Wang  <wangxianzhu@chromium.org>
 
         Ensure TestWebKitAPI works on mac, win, chromium-mac and chromium-linux
